--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,30 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Dependency directories
+node_modules/
+.pnp
+.pnp.js
 
-# vercel
-.vercel
+# Build output
+.next/
+out/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Static and cache files
+.cache/
+.vscode/
+.idea/
+
+# System files
+.DS_Store
+Thumbs.db
+*.swp
